<resources>
    <string name="app_name">ISA Monitor</string>
    <string name="parameters">Parameters</string>
    <string name="title_parameter_detail">Parameter Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="e_mail">e-mail</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="register_description">I don\'t have an account</string>
    <string name="isa_logo">ISA logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="submit">Submit</string>
    <string name="reset_pw_description">Please enter and submit your email address, and we will send you an email to reset your password</string>
    <string name="reset_pw_title">Reset your password</string>
    <string name="log_out">Log out</string>
    <string name="current_value">"Current value: "</string>
    <string name="register_new_account">Register new account</string>
    <string name="data_is_valid">Data is valid</string>
    <string name="data_is_invalid">Data is invalid</string>
    <string name="ErrorMessageNotConnected">Connection error, check VPN and internet connection</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="verify_account">Please verify your account before logging in</string>
    <string name="username_pw_incorrect">Username or password incorrect</string>
    <string name="user_reauthenticated">User is reauthenticated</string>
    <string name="verification_mail_sent">Verification email has been sent. Please verify your account</string>
    <string name="error_contact_support">Something went wrong, please contact support</string>
    <string name="verification_email_sent_to">"Verification Email sent to "</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="passwords_must_match">Passwords must match!</string>
    <string name="password_must_be">"Password must be "</string>
    <string name="characters_long">" characters long!"</string>
    <string name="no_users_exist">No user exists with that email</string>
    <string name="email_has_been_sent">Email has been sent.</string>
    <string name="not_logged_in">Not logged in, try again</string>
</resources>
