<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.smap16e.group02.isamonitor.login.ResetPasswordActivity">
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/ic_isa_vector_red_nobackground_shadow"
        android:tint="#ff0000"
        android:contentDescription="@string/isa_logo" />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_pw_title"
        android:textAlignment="center"
        android:textSize="20sp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_pw_description"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/res_pw_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/e_mail"
        />
    <Button
        android:id="@+id/btn_res_pw_submit"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
